--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <div class="main-container">
         <div class="top">
             <h3>Experiences in Paris</h3>
+            <!-- <p>See all  ></p> -->
+            <button id="add">Click me</button>
         </div>
-        <div class="bottom"></div>
+        <div class="cards-container">
+            <!-- <div class="card"></div> -->
 
+        </div>
     </div>
 
     <script src="main.js"></script>
