--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         <div class="cards-container">
             <!-- <div class="card"></div> -->
-
+            <!-- <div class="card"> -->
+            </div>
         </div>
     </div>
 
