top part layout + added image + resized containers

--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="main-container">
-        <div class="top">
-            <h3>Experiences in Paris</h3>
-            <!-- <p>See all  ></p> -->
-            <button id="add">Click me</button>
+
+        <div class="left">
+           <div><p><<</p></div>
         </div>
-        <div class="cards-container">
-            <!-- <div class="card"></div> -->
-            <!-- <div class="card"> -->
+
+        <div class="container">
+            <div class="top">
+                <div>
+                    <h2>Experiences in Paris</h2>
+                </div>
+                <div class="see"><a href="#">See all ></a></div>
             </div>
+            <div class="cards-container"></div>
+        </div>
+
+        <div class="right">
+            <div><p>>></p></div>
         </div>
     </div>
-
+    
     <script src="main.js"></script>
 </body>
+
 </html>
